--- a/lkl/lkl/templates/lkl/register.html
+++ b/lkl/lkl/templates/lkl/register.html
@@ -84,7 +84,7 @@
                 <label for="" class="weui-label">邀请码</label>
             </div>
             <div class="weui-cell__bd">
-                <input class="weui-input" id="invite_code" name="invite_code" type="text" placeholder="请输入邀请码">
+                <input class="weui-input" id="invite_code" name="invite_code" type="text" placeholder="请输入邀请码或者推荐人手机号">
             </div>
             <div class="weui-cell__ft">
                 <i class="weui-icon-warn">{{errors.invite_code.0}}</i>
