--- a/lkl/lkl/templates/lkl/account.html
+++ b/lkl/lkl/templates/lkl/account.html
@@ -6,6 +6,13 @@
 {% endblock %}
 
 {% block container  %}
+<div class="weui-topbar">
+    <h1 class="weui-topbar-title">请假</h1>
+    <a href="/user/"  class="weui-topbar-back"><i class="iconfont icon-xiangzuo"></i></a>
+    <a href="javascript:;" class="weui-topbar-more" id="submitA" onclick="addLeave()">提交</a>
+</div>
+
+
 <div>
     Account Page
     <a href="{% url 'user_logout' %}">退出</a>
@@ -17,7 +24,7 @@
             <img src="http://m.shensuantang.com/Public/sstm/imagesm/mh/dianhua.png" alt="">
         </div>
         <p class="weui-grid__label">
-            我的机器
+            我的信息
         </p>
     </a>
     <a href="" class="weui-grid js_grid">
@@ -25,7 +32,7 @@
             <img src="http://m.shensuantang.com/Public/sstm/imagesm/mh/gongsi.png" alt="">
         </div>
         <p class="weui-grid__label">
-            绑定新机器
+            我的刷卡
         </p>
     </a>
     <a href="" class="weui-grid js_grid">
@@ -49,7 +56,7 @@
             <img src="http://m.shensuantang.com/Public/sstm/imagesm/mh/gongsi.png" alt="">
         </div>
         <p class="weui-grid__label">
-            绑定新机器
+            安全
         </p>
     </a>
     <a href="" class="weui-grid js_grid">
@@ -57,7 +64,7 @@
             <img src="http://m.shensuantang.com/Public/sstm/imagesm/mh/gongsi.png" alt="">
         </div>
         <p class="weui-grid__label">
-            绑定新机器
+             联系我们
         </p>
     </a>
 </div>
