--- a/lkl/lkl/templates/lkl/index.html
+++ b/lkl/lkl/templates/lkl/index.html
@@ -25,21 +25,24 @@
     <section>
         <h2 class="title">关于我们</h2>
         <section>
-            <h3>1.我们的资质</h3>
+            <h3>1. 标题一</h3>
             <p>
-                正规授权公司。官网可查。
-                顶级分润，与您共享。
+                内容内容内容
+                内容内容内容
+                内容内容内容
             </p>
         </section>
         <section>
-            <h3>2.我们的优势</h3>
+            <h3>2. 标题二</h3>
             <p>
-                传统模式，推广累，维护类，短暂的收益。
+                内容内容内容
+                内容内容内容
+                内容内容内容
             </p>
             <p>
-                通过我们，0投资，不压钱，不压货。起步0.55%手续费。
-                推广简单，病毒传播，持久盈利。账户可成长。
-                扔掉你的高费率的机器吧，舍弃原来的模式吧。
+                内容内容内容
+                内容内容内容
+                内容内容内容
             </p>
         </section>
     </section>
