--- a/lkl/lkl/templates/lkl/menu.html
+++ b/lkl/lkl/templates/lkl/menu.html
@@ -1,16 +1,22 @@
 <!--底部固定导航 开始-->
 <div class="weui-tabbar">
     <a href="/user/" class="weui-tabbar__item ">
-        <div class="weui-tabbar__icon"> <i class="iconfont icon-home"></i> </div>
+        <div class="weui-tabbar__icon">
+        <i><svg class="icon" aria-hidden="true"><use xlink:href="#icon-home"></use></svg></i>
+        </div>
         <p class="weui-tabbar__label">首 页</p>
     </a>
     <a href="/user/news/" class="weui-tabbar__item ">
-        <div class="weui-tabbar__icon"> <i class="iconfont icon-liebiao"></i> </div>
+        <div class="weui-tabbar__icon">
+        <i><svg class="icon" aria-hidden="true"><use xlink:href="#icon-liebiao"></use></svg></i>
+        </div>
         <p class="weui-tabbar__label">资 讯</p>
     </a>
 
     <a href="/user/account/" class="weui-tabbar__item ">
-        <div class="weui-tabbar__icon"> <i class="iconfont icon-user1"></i> </div>
+        <div class="weui-tabbar__icon">
+            <i><svg class="icon" aria-hidden="true"><use xlink:href="#icon-user1"></use></svg></i>
+        </div>
         <p class="weui-tabbar__label">我 的</p>
     </a>
 </div>
