--- a/lkl/lkl/templates/lkl/account.html
+++ b/lkl/lkl/templates/lkl/account.html
@@ -8,14 +8,10 @@
 {% block container  %}
 <div class="weui-topbar">
     <h1 class="weui-topbar-title">用户页</h1>
-    <a href="/user/"  class="weui-topbar-back"><i class="iconfont icon-xiangzuo"></i></a>
+    <a href="/user/"  class="weui-topbar-back"><i><svg class="icon" aria-hidden="true"><use xlink:href="#icon-zuojiantou"></use></svg></i></a>
 </div>
 
-
-<div>
-    Account Page
-    <a href="{% url 'user_logout' %}">退出</a>
-</div>
+<div class="bd mt40 ">
 
 <div class="weui-grids">
     <a href="/user/" class="weui-grid js_grid">
@@ -63,9 +59,19 @@
             <img src="http://m.shensuantang.com/Public/sstm/imagesm/mh/gongsi.png" alt="">
         </div>
         <p class="weui-grid__label">
-             联系我们
+            联系我们
         </p>
     </a>
+    <a href="{% url 'user_logout' %}" class="weui-grid js_grid">
+        <div class="weui-grid__icon">
+            <img src="http://m.shensuantang.com/Public/sstm/imagesm/mh/gongsi.png" alt="">
+        </div>
+        <p class="weui-grid__label">
+            退出
+        </p>
+    </a>
+</div>
+
 </div>
 {% endblock %}
 
