--- a/lkl/lkl/templates/lkl/index.html
+++ b/lkl/lkl/templates/lkl/index.html
@@ -8,7 +8,7 @@
 
 {% block container  %}
 <h3>
-尊敬的贵宾
+那个谁谁谁
 {% if request.user.is_authenticated %}
     {% if request.user.userprofile %}
     {{ request.user.userprofile.name }}
@@ -21,9 +21,9 @@
 
 
 <article class="weui-article">
-    <h1>顺势而为 乘势而上</h1>
+    <h1>假如生活欺骗了你</h1>
     <section>
-        <h2 class="title">关于我们</h2>
+        <h2 class="title">关于我</h2>
         <section>
             <h3>1. 标题一</h3>
             <p>
