--- a/lkl/lkl/templates/lkl/account.html
+++ b/lkl/lkl/templates/lkl/account.html
@@ -2,12 +2,12 @@
 {% load staticfiles %}
 
 {% block header_title  %}
-    <title>用户页</title>
+    <title>标题</title>
 {% endblock %}
 
 {% block container  %}
 <div class="weui-topbar">
-    <h1 class="weui-topbar-title">用户页</h1>
+    <h1 class="weui-topbar-title">我的页面</h1>
     <a href="/user/"  class="weui-topbar-back"><i><svg class="icon" aria-hidden="true"><use xlink:href="#icon-zuojiantou"></use></svg></i></a>
 </div>
 
@@ -27,7 +27,7 @@
             <img src="http://m.shensuantang.com/Public/sstm/imagesm/mh/gongsi.png" alt="">
         </div>
         <p class="weui-grid__label">
-            绑定机器
+            生活笔记
         </p>
     </a>
     <a href="javascript:;" class="weui-grid js_grid" id="invite_code">
@@ -35,7 +35,7 @@
             <img src="http://m.shensuantang.com/Public/sstm/imagesm/mh/dianhua.png" alt="">
         </div>
         <p class="weui-grid__label">
-            我的邀请码
+            邀请码
         </p>
     </a>
     <a href="" class="weui-grid js_grid">
