--- a/lkl/lkl/templates/lkl/search_terminal.html
+++ b/lkl/lkl/templates/lkl/search_terminal.html
@@ -31,6 +31,9 @@
         月份
       </div>
       <div class="weui-cell__bd">
+        交易金额
+      </div>
+      <div class="weui-cell__bd">
         手续费
       </div>
     </div>
@@ -42,6 +45,9 @@
       </div>
       <div class="weui-cell__bd">
         {{d.1}}
+      </div>
+      <div class="weui-cell__bd">
+        {{d.2}}
       </div>
     </div>
 
