--- a/lkl/lkl/templates/lkl/account.html
+++ b/lkl/lkl/templates/lkl/account.html
@@ -2,16 +2,11 @@
 {% load staticfiles %}
 
 {% block header_title  %}
-    <title>标题</title>
+    <title>我的页面</title>
 {% endblock %}
 
 {% block container  %}
-<div class="weui-topbar">
-    <h1 class="weui-topbar-title">我的页面</h1>
-    <a href="/user/"  class="weui-topbar-back"><i><svg class="icon" aria-hidden="true"><use xlink:href="#icon-zuojiantou"></use></svg></i></a>
-</div>
 
-<div class="bd mt40 ">
 
 <div class="weui-grids">
     <a href="/user/" class="weui-grid js_grid">
@@ -54,12 +49,28 @@
             查询
         </p>
     </a>
-    <a href="" class="weui-grid js_grid">
+    <a href="{% url 'friend_list' %}" class="weui-grid js_grid">
         <div class="weui-grid__icon">
             <img src="http://m.shensuantang.com/Public/sstm/imagesm/mh/gongsi.png" alt="">
         </div>
         <p class="weui-grid__label">
-            联系我们
+            我的朋友
+        </p>
+    </a>
+    <a href="{% url 'pos_list' %}" class="weui-grid js_grid">
+        <div class="weui-grid__icon">
+            <img src="http://m.shensuantang.com/Public/sstm/imagesm/mh/gongsi.png" alt="">
+        </div>
+        <p class="weui-grid__label">
+            我的终端
+        </p>
+    </a>
+    <a href="{% url 'bind_pos' %}" class="weui-grid js_grid">
+        <div class="weui-grid__icon">
+            <img src="http://m.shensuantang.com/Public/sstm/imagesm/mh/gongsi.png" alt="">
+        </div>
+        <p class="weui-grid__label">
+            绑定
         </p>
     </a>
     <a href="{% url 'user_logout' %}" class="weui-grid js_grid">
