--- a/lkl/lkl/templates/lkl/pos_list.html
+++ b/lkl/lkl/templates/lkl/pos_list.html
@@ -30,6 +30,8 @@
 {% endblock %}
 
 {% block footer_js_extra %}
-
+<script>
+    $.alert("请务必填写自己的终端号，后续会严格校验。如果恶意绑定，后果自负！");
+</script>
 
 {% endblock %}
