--- a/lkl/lkl/templates/lkl/account.html
+++ b/lkl/lkl/templates/lkl/account.html
@@ -97,7 +97,7 @@
             $(location).attr('href', '{% url "bind_pos" %}');
         },
         function() {
-            $.toast("我从来没有见过如此厚颜无耻之人！", "text");
+            $.toast("我从未见过有如此厚颜无耻之人！", "text");
         },
         );
     });
