--- a/lkl/lkl/templates/lkl/account.html
+++ b/lkl/lkl/templates/lkl/account.html
@@ -88,18 +88,14 @@
 
 {% block footer_js_extra %}
 <script>
-    $(document).on("click", "#invite_code", function() {
-        $.toptip('您的邀请码是...', 'success');
+    $("#invite_code").on("click",function() {
         $.alert("您的邀请码是{{request.user.userprofile.code}}", "邀请码");
     });
-    $(document).on("click", "#bind_pos", function() {
+    $("#bind_pos").on("click", function() {
         $.confirm("请务必填写自己的终端号，后续会严格校验。如果恶意绑定，后果自负！", "警告",
         function() {
             $(location).attr('href', '{% url "bind_pos" %}');
-        },
-        function() {
-            $.toast("我从未见过有如此厚颜无耻之人！", "text");
-        },
+        }
         );
     });
 </script>
