--- a/lkl/lkl/templates/lkl/base.html
+++ b/lkl/lkl/templates/lkl/base.html
@@ -35,14 +35,19 @@
     .weui-tabbar__item.weui-bar__item--on .weui-tabbar__label {
         color: cornflowerblue;
     }
+    .weui-tabbar {
+        position: fixed;
+    }
     </style>
 </head>
 {% endblock %}
 
 <body>
 
+
 {% block container  %}
 {% endblock %}
+
 
 
 {% block menu %}
