--- a/lkl/lkl/templates/lkl/friend_list.html
+++ b/lkl/lkl/templates/lkl/friend_list.html
@@ -11,7 +11,7 @@
     <a href="{% url 'user_account' %}"  class="weui-topbar-back"><i><svg class="icon" aria-hidden="true"><use xlink:href="#icon-zuojiantou"></use></svg></i></a>
 </div>
 
-<div class="bd mt40 ">
+<div class="bd mt40 mb40">
 
     <div class="weui-cells">
         <div class="weui-cell">
