--- a/lkl/lkl/templates/lkl/search_terminal.html
+++ b/lkl/lkl/templates/lkl/search_terminal.html
@@ -6,6 +6,13 @@
 
 {% block container %}
 
+{% if s == "0" %}
+<div class="weui-topbar">
+    <h1 class="weui-topbar-title">终端明细</h1>
+    <a href="{% url 'pos_list' %}"  class="weui-topbar-back"><i><svg class="icon" aria-hidden="true"><use xlink:href="#icon-zuojiantou"></use></svg></i></a>
+</div>
+<div class="bd mt40 mb40">
+{% else %}
 <div class="weui-search-bar" id="searchBar">
     <form class="weui-search-bar__form" method="post" action="{% url 'search_terminal' %}">
     {% csrf_token %}
@@ -21,6 +28,7 @@
     </form>
     <a href="javascript:" class="weui-search-bar__cancel-btn" id="searchCancel">取消</a>
 </div>
+{% endif %}
 
 {% if request.POST.q %}
 <div class="weui-cells__title">终端号：{{request.POST.q}}</div>
@@ -55,6 +63,8 @@
 </div>
 
 {% endif %}
+
+{% if s == "0" %}</div>{% endif %}
 
 {% endblock %}
 
