--- a/lkl/lkl/templates/lkl/register.html
+++ b/lkl/lkl/templates/lkl/register.html
@@ -10,7 +10,7 @@
                 <label class="weui-label">手机</label>
             </div>
             <div class="weui-cell__bd">
-                <input class="weui-input" id="username" name="username" type="number" pattern="[0-9]*" placeholder="请输入手机号">
+                <input class="weui-input" id="username" name="username" type="number" pattern="[0-9]*" placeholder="真实手机号-提现收验证码">
             </div>
             <div class="weui-cell__ft">
                 <i class="weui-icon-warn">{{errors.username.0}}</i>
