--- a/lkl/lkl/templates/lkl/bind_pos.html
+++ b/lkl/lkl/templates/lkl/bind_pos.html
@@ -1,5 +1,9 @@
 {% extends "lkl/base.html" %} {% load staticfiles %}
 
+{% block header_title  %}
+    <title>绑定终端</title>
+{% endblock %}
+
 {% block container %}
 <form method="post" action="{% url 'bind_pos' %}">
     {% csrf_token %}
