--- a/lkl/lkl/templates/lkl/base.html
+++ b/lkl/lkl/templates/lkl/base.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     {% block header_title  %}
-    <title>x这是标题</title>
+    <title>卡拉慧</title>
     {% endblock %}
 
     <meta name="renderer" content="webkit">
