--- a/lkl/lkl/templates/lkl/account.html
+++ b/lkl/lkl/templates/lkl/account.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block header_title  %}
-    <title>我的页面</title>
+    <title>个人中心</title>
 {% endblock %}
 
 {% block container  %}
