--- a/lkl/lkl/templates/lkl/index.html
+++ b/lkl/lkl/templates/lkl/index.html
@@ -8,7 +8,7 @@
 
 {% block container  %}
 <h3>
-那个谁谁谁
+尊敬的
 {% if request.user.is_authenticated %}
     {% if request.user.userprofile %}
     {{ request.user.userprofile.name }}
