--- a/lkl/lkl/templates/lkl/account.html
+++ b/lkl/lkl/templates/lkl/account.html
@@ -9,7 +9,7 @@
 
 
 <div class="weui-grids">
-    <a href="/user/" class="weui-grid js_grid">
+    <a href="/user/info/" class="weui-grid js_grid">
         <div class="weui-grid__icon">
             <img src="http://m.shensuantang.com/Public/sstm/imagesm/mh/dianhua.png" alt="">
         </div>
