--- a/lkl/lkl/templates/lkl/user_info.html
+++ b/lkl/lkl/templates/lkl/user_info.html
@@ -7,7 +7,9 @@
 {% block container %}
 
 <div class="weui-topbar">
-    <h1 class="weui-topbar-title">姓名</h1>
+    <h1 class="weui-topbar-title">
+        {{ request.user.userprofile.name }}
+    </h1>
     <a href="{% url 'user_account' %}"  class="weui-topbar-back"><i><svg class="icon" aria-hidden="true"><use xlink:href="#icon-zuojiantou"></use></svg></i></a>
 </div>
 
@@ -16,43 +18,84 @@
 <div class="weui-form-preview">
     <div class="weui-form-preview__hd">
         <label class="weui-form-preview__label">手机号</label>
-        <em class="weui-form-preview__value">13300000000</em>
+        <em class="weui-form-preview__value">
+        {{ request.user.userprofile.phone }}
+        </em>
     </div>
+    {% if fenrun %}
+    <div class="weui-form-preview__bd">
+        <div class="weui-form-preview__item">
+            <label class="weui-form-preview__label">分润点数</label>
+            <span class="weui-form-preview__value">{{ fenrun.point}}</span>
+        </div>
+        {% if fenrun.rmb > 0 %}
+        <div class="weui-form-preview__item">
+            <label class="weui-form-preview__label">秒到点数</label>
+            <span class="weui-form-preview__value">{{ fenrun.rmb }}</span>
+        </div>
+        {% endif %}
+    </div>
+    {% else %}
+    <div class="weui-form-preview__bd">
+        <div class="weui-form-preview__item">
+            <label class="weui-form-preview__label">联系客服添加分润</label>
+            <span class="weui-form-preview__value">微信：45367076</span>
+        </div>
+    </div>
+    {% endif %}
     <div class="weui-form-preview__bd">
         <div class="weui-form-preview__item">
             <label class="weui-form-preview__label">刷卡总额</label>
-            <span class="weui-form-preview__value">11111</span>
+            <span class="weui-form-preview__value">{{ d1_total }}</span>
         </div>
+        {% if fenrun.rmb > 0 %}
         <div class="weui-form-preview__item">
             <label class="weui-form-preview__label">秒到笔数</label>
-            <span class="weui-form-preview__value">2</span>
+            <span class="weui-form-preview__value">{{ d0_num }}</span>
         </div>
+        {% endif %}
+    </div>
+    <div class="weui-form-preview__ft">
+    <span class="weui-form-preview__btn weui-form-preview__btn_default">数据从2018年2月1日开始统计，累积到三天前的交易。</span>
+
     </div>
 </div>
 <br/>
 <div class="weui-form-preview">
     <div class="weui-form-preview__hd">
-        <label class="weui-form-preview__label">刷卡返利</label>
-        <span class="weui-form-preview__value">100</span>
-        <label class="weui-form-preview__label">推荐奖励</label>
-        <span class="weui-form-preview__value">20</span>
+        <label class="weui-form-preview__label">刷卡返利余额</label>
+        <span class="weui-form-preview__value">
+        {% if request.user.userrmb %}
+            {{ request.user.userrmb.rmb }}
+        {% else %}
+            0
+        {% endif %}
+        </span>
+        <label class="weui-form-preview__label">推荐奖励余额</label>
+        <span class="weui-form-preview__value">
+        {% if request.user.userrmb %}
+            {{ request.user.userrmb.child_rmb }}
+        {% else %}
+            0
+        {% endif %}
+        </span>
     </div>
     <div class="weui-form-preview__bd">
         <div class="weui-form-preview__item">
             <label class="weui-form-preview__label">支付宝账户</label>
-            <span class="weui-form-preview__value">xx@xx.com</span>
+            <span class="weui-form-preview__value"></span>
         </div>
         <div class="weui-form-preview__item">
             <label class="weui-form-preview__label">支付宝实名</label>
-            <span class="weui-form-preview__value">王二小</span>
+            <span class="weui-form-preview__value"></span>
         </div>
     </div>
     <div class="weui-form-preview__ft">
         <button type="submit" class="weui-form-preview__btn weui-form-preview__btn_primary" href="javascript:">绑定支付宝</button>
     </div>
     <div class="weui-form-preview__ft">
-        <button type="submit" class="weui-form-preview__btn weui-form-preview__btn_primary" href="javascript:">余额提现</button>
-        <button type="submit" class="weui-form-preview__btn weui-form-preview__btn_primary" href="javascript:">推荐提现</button>
+        <button type="submit" class="weui-form-preview__btn weui-form-preview__btn_primary" href="javascript:">返利余额提现</button>
+        <button type="submit" class="weui-form-preview__btn weui-form-preview__btn_primary" href="javascript:">推荐余额提现</button>
     </div>
 </div>
 
