--- a/lkl/lkl/templates/lkl/account.html
+++ b/lkl/lkl/templates/lkl/account.html
@@ -11,7 +11,7 @@
 <div class="weui-grids">
     <a href="/user/info/" class="weui-grid js_grid">
         <div class="weui-grid__icon">
-            <img src="http://m.shensuantang.com/Public/sstm/imagesm/mh/dianhua.png" alt="">
+            <img src="{% static "/lkl/icon/xinxi.png" %}" alt="">
         </div>
         <p class="weui-grid__label">
             我的信息
@@ -19,7 +19,7 @@
     </a>
     <a href="" class="weui-grid js_grid">
         <div class="weui-grid__icon">
-            <img src="http://m.shensuantang.com/Public/sstm/imagesm/mh/gongsi.png" alt="">
+            <img src="{% static "/lkl/icon/biji.png" %}" alt="">
         </div>
         <p class="weui-grid__label">
             生活笔记
@@ -27,7 +27,7 @@
     </a>
     <a href="javascript:;" class="weui-grid js_grid" id="invite_code">
         <div class="weui-grid__icon">
-            <img src="http://m.shensuantang.com/Public/sstm/imagesm/mh/dianhua.png" alt="">
+            <img src="{% static "/lkl/icon/dianhua.png" %}" alt="">
         </div>
         <p class="weui-grid__label">
             邀请码
@@ -35,7 +35,7 @@
     </a>
     <a href="" class="weui-grid js_grid">
         <div class="weui-grid__icon">
-            <img src="http://m.shensuantang.com/Public/sstm/imagesm/mh/biming.png" alt="">
+            <img src="{% static "/lkl/icon/dizhi.png" %}" alt="">
         </div>
         <p class="weui-grid__label">
             我的地址
@@ -43,7 +43,7 @@
     </a>
     <a href="{% url 'search_terminal' %}" class="weui-grid js_grid">
         <div class="weui-grid__icon">
-            <img src="http://m.shensuantang.com/Public/sstm/imagesm/mh/gongsi.png" alt="">
+            <img src="{% static "/lkl/icon/sosuo.jpg" %}" alt="">
         </div>
         <p class="weui-grid__label">
             查询
@@ -51,7 +51,7 @@
     </a>
     <a href="{% url 'friend_list' %}" class="weui-grid js_grid">
         <div class="weui-grid__icon">
-            <img src="http://m.shensuantang.com/Public/sstm/imagesm/mh/gongsi.png" alt="">
+            <img src="{% static "/lkl/icon/haoyou.png" %}" alt="">
         </div>
         <p class="weui-grid__label">
             我的朋友
@@ -59,7 +59,7 @@
     </a>
     <a href="{% url 'pos_list' %}" class="weui-grid js_grid">
         <div class="weui-grid__icon">
-            <img src="http://m.shensuantang.com/Public/sstm/imagesm/mh/gongsi.png" alt="">
+            <img src="{% static "/lkl/icon/pos.png" %}" alt="">
         </div>
         <p class="weui-grid__label">
             我的终端
@@ -67,7 +67,7 @@
     </a>
     <a href="javascript:;" class="weui-grid js_grid" id="bind_pos">
         <div class="weui-grid__icon">
-            <img src="http://m.shensuantang.com/Public/sstm/imagesm/mh/gongsi.png" alt="">
+            <img src="{% static "/lkl/icon/gongsi.png" %}" alt="">
         </div>
         <p class="weui-grid__label">
             绑定
@@ -75,7 +75,7 @@
     </a>
     <a href="{% url 'user_logout' %}" class="weui-grid js_grid">
         <div class="weui-grid__icon">
-            <img src="http://m.shensuantang.com/Public/sstm/imagesm/mh/gongsi.png" alt="">
+            <img src="{% static "/lkl/icon/tuichu.jpg" %}" alt="">
         </div>
         <p class="weui-grid__label">
             退出
