--- a/lkl/lkl/templates/lkl/user_info.html
+++ b/lkl/lkl/templates/lkl/user_info.html
@@ -23,7 +23,7 @@
         </em>
     </div>
     {% if fenrun %}
-    <div class="weui-form-preview__bd">
+    <div class="weui-form-preview__hd">
         <div class="weui-form-preview__item">
             <label class="weui-form-preview__label">分润点数</label>
             <span class="weui-form-preview__value">{{ fenrun.point}}</span>
@@ -43,7 +43,7 @@
         </div>
     </div>
     {% endif %}
-    <div class="weui-form-preview__bd">
+    <div class="weui-form-preview__hd">
         <div class="weui-form-preview__item">
             <label class="weui-form-preview__label">刷卡总额</label>
             <span class="weui-form-preview__value">{{ d1_total }}</span>
@@ -73,7 +73,7 @@
         </span>
     </div>
     {% if alipay %}
-    <div class="weui-form-preview__bd">
+    <div class="weui-form-preview__hd">
         <div class="weui-form-preview__item">
             <label class="weui-form-preview__label">支付宝账户</label>
             <span class="weui-form-preview__value">{{ alipay.account }}</span>
