--- a/lkl/lkl/templates/lkl/user_info.html
+++ b/lkl/lkl/templates/lkl/user_info.html
@@ -67,10 +67,12 @@
         <span class="weui-form-preview__value">
             {{ rmb }}
         </span>
+        {% if 0 %}
         <label class="weui-form-preview__label">推荐奖励余额</label>
         <span class="weui-form-preview__value">
             {{ child_rmb }}
         </span>
+        {% endif %}
     </div>
     {% if alipay %}
     <div class="weui-form-preview__hd">
@@ -91,7 +93,9 @@
     {% if alipay %}
     <div class="weui-form-preview__ft">
         <button id="tixian_rmb" type="submit" class="weui-form-preview__btn weui-form-preview__btn_primary" href="javascript:">返利余额提现</button>
+        {% if 0 %}
         <button id="tixian_child_rmb" type="submit" class="weui-form-preview__btn weui-form-preview__btn_primary" href="javascript:">推荐余额提现</button>
+        {% endif %}
     </div>
     {% endif %}
 </div>
@@ -103,7 +107,13 @@
 {% block footer_js_extra %}
 <script>
     $("#tixian_rmb").click(function() {
-        $.toptip('功能实现中，请耐心等待');
+        var rmb = {{ rmb }};
+        if (rmb < 100) {
+            $.toptip("满100才能提现，加油！");
+        }
+        else {
+            $.toptip('功能实现中，请耐心等待');
+        }
     });
     $("#tixian_child_rmb").click(function() {
         $.toptip('功能实现中，请耐心等待');
