--- a/lkl/lkl/templates/lkl/account.html
+++ b/lkl/lkl/templates/lkl/account.html
@@ -33,7 +33,7 @@
             邀请码
         </p>
     </a>
-    <a href="" class="weui-grid js_grid">
+    <a href="javascript:;" class="weui-grid js_grid">
         <div class="weui-grid__icon">
             <img src="{% static "/lkl/icon/dizhi.png" %}" alt="">
         </div>
@@ -41,7 +41,7 @@
             我的地址
         </p>
     </a>
-    <a href="{% url 'search_terminal' %}" class="weui-grid js_grid">
+    <a href="javascript:;" class="weui-grid js_grid">
         <div class="weui-grid__icon">
             <img src="{% static "/lkl/icon/sosuo.jpg" %}" alt="">
         </div>
