--- a/lkl/lkl/templates/lkl/account.html
+++ b/lkl/lkl/templates/lkl/account.html
@@ -9,7 +9,7 @@
 
 
 <div class="weui-grids">
-    <a href="/user/info/" class="weui-grid js_grid">
+    <a href="{% url 'user_info' %}" class="weui-grid js_grid">
         <div class="weui-grid__icon">
             <img src="{% static "/lkl/icon/xinxi.png" %}" alt="">
         </div>
@@ -17,7 +17,7 @@
             我的信息
         </p>
     </a>
-    <a href="" class="weui-grid js_grid">
+    <a href="javascript:;" class="weui-grid js_grid">
         <div class="weui-grid__icon">
             <img src="{% static "/lkl/icon/biji.png" %}" alt="">
         </div>
