--- a/lkl/lkl/templates/lkl/search_terminal.html
+++ b/lkl/lkl/templates/lkl/search_terminal.html
@@ -8,7 +8,7 @@
 
 {% if s == "0" %}
 <div class="weui-topbar">
-    <h1 class="weui-topbar-title">终端明细</h1>
+    <h1 class="weui-topbar-title">交易汇总</h1>
     <a href="{% url 'pos_list' %}"  class="weui-topbar-back"><i><svg class="icon" aria-hidden="true"><use xlink:href="#icon-zuojiantou"></use></svg></i></a>
 </div>
 <div class="bd mt40 mb40">
