--- a/lkl/lkl/templates/lkl/tixian_rmb.html
+++ b/lkl/lkl/templates/lkl/tixian_rmb.html
@@ -24,7 +24,7 @@
                 <label class="weui-label">提现金额</label>
             </div>
             <div class="weui-cell__bd">
-                <input class="weui-input" id="rmb" name="rmb" type="text" placeholder="提现金额">
+                <input class="weui-input" id="rmb" name="rmb" type="text" placeholder="金额为100的整数倍">
             </div>
             <div class="weui-cell__ft">
                 <i class="weui-icon-warn">{{errors.rmb.0}}</i>
