--- a/lkl/lkl/templates/lkl/register.html
+++ b/lkl/lkl/templates/lkl/register.html
@@ -22,7 +22,7 @@
                 <label class="weui-label">姓名</label>
             </div>
             <div class="weui-cell__bd">
-                <input class="weui-input" id="name" name="name" type="text" placeholder="真实姓名">
+                <input class="weui-input" id="name" name="name" type="text" placeholder="真实姓名-提现验证">
             </div>
             <div class="weui-cell__ft">
                 <i class="weui-icon-warn">{{errors.name.0}}</i>
