--- a/lkl/lkl/templates/admin/base_site.html
+++ b/lkl/lkl/templates/admin/base_site.html
@@ -45,8 +45,9 @@
 
 {# Footer branding name (center) #}
 
-{#{% block footer_branding %}#}
-{#{% endblock %}#}
+{% block footer_branding %}
+跟狼哥，有肉吃。。。
+{% endblock %}
 
 
 {# Footer copyright (right side) #}
