--- a/lkl/lkl/templates/admin/income.html
+++ b/lkl/lkl/templates/admin/income.html
@@ -10,7 +10,7 @@
         <tr>
             <th>月份</th>
             <th>刷卡量</th>
-            <th>总费用</th>
+            <th>手续费</th>
             <th>总收入</th>
         </tr>
         {% for month, data in d1_data.iteritems %}
