--- a/lkl/lkl/templates/admin/income.html
+++ b/lkl/lkl/templates/admin/income.html
@@ -4,15 +4,18 @@
 {% block content %}
 {{ block.super }}
 
-<div id="d1">
-    <table border="1" cellpadding="5" cellspacing="0" id="result_list">
-        <caption align="top">刷卡数据</caption>
+<div id="d1" class="results">
+    <table id="result_list" class="table table-striped table-bordered table-hover table-condensed">
+        <caption align="top"><font size="5">刷卡数据</font></caption>
+        <thead>
         <tr>
             <th>月份</th>
             <th>刷卡量</th>
             <th>手续费</th>
             <th>总收入</th>
         </tr>
+        </thead>
+        <tbody>
         {% for month, data in d1_data.iteritems %}
         <tr>
             <td>{{ month }}</td>
@@ -21,19 +24,23 @@
             <td>{{ data.rmb }}</td>
         </tr>
         {% endfor %}
+        </tbody>
     </table>
     <br/>
     <br/>
 </div>
 
-<div id="d0">
-    <table border="1" cellpadding="5" cellspacing="0" id="result_list">
-        <caption align="top">秒到数据</caption>
+<div id="d0" class="results">
+    <table id="result_list" class="table table-striped table-bordered table-hover table-condensed">
+        <caption align="top" ><font size="5">秒到数据</font></caption>
+        <thead>
         <tr>
             <th>月份</th>
             <th>秒到笔数</th>
             <th>总收入</th>
         </tr>
+        </thead>
+        <tbody>
         {% for month, data in d0_data.iteritems %}
         <tr>
             <td>{{ month }}</td>
@@ -41,6 +48,7 @@
             <td>{{ data.rmb }}</td>
         </tr>
         {% endfor %}
+        </tbody>
     </table>
     <br/>
     <br/>
