--- a/lkl/lkl/templates/admin/income.html
+++ b/lkl/lkl/templates/admin/income.html
@@ -4,6 +4,8 @@
 {% block content %}
 {{ block.super }}
 
+<br/>
+<br/>
 <div id="d1" class="results">
     <table id="result_list" class="table table-striped table-bordered table-hover table-condensed">
         <caption align="top"><font size="5">刷卡数据</font></caption>
@@ -48,6 +50,43 @@
             <td>{{ data.rmb }}</td>
         </tr>
         {% endfor %}
+        </tbody>
+    </table>
+    <br/>
+    <br/>
+</div>
+
+<div id="rmb" class="results">
+    <table id="result_list" class="table table-striped table-bordered table-hover table-condensed">
+        <caption align="top" ><font size="5">总支出数据（不分月）</font></caption>
+        <thead>
+        <tr>
+            <th>项目</th>
+            <th>金额</th>
+            <th>状态</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>已提现</td>
+            <td>{{ tx_rmb }}</td>
+            <td>完成</td>
+        </tr>
+        <tr>
+            <td>未提现——直接分润</td>
+            <td>{{ urmb }}</td>
+            <td>待提现</td>
+        </tr>
+        <tr>
+            <td>未提现——间接分润</td>
+            <td>{{ child_urmb }}</td>
+            <td>功能规划中</td>
+        </tr>
+        <tr>
+            <td>未分账</td>
+            <td>未知</td>
+            <td>用户未设置分润</td>
+        </tr>
         </tbody>
     </table>
     <br/>
