--- a/lkl/lkl/templates/admin/income.html
+++ b/lkl/lkl/templates/admin/income.html
@@ -56,6 +56,28 @@
     <br/>
 </div>
 
+<div id="pos" class="results">
+    <table id="result_list" class="table table-striped table-bordered table-hover table-condensed">
+        <caption align="top" ><font size="5">达标终端数据</font></caption>
+        <thead>
+        <tr>
+            <th>月份</th>
+            <th>达标数量</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for month, n in pos_data.iteritems %}
+        <tr>
+            <td>{{ month }}</td>
+            <td>{{ n }}</td>
+        </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+    <br/>
+    <br/>
+</div>
+
 <div id="rmb" class="results">
     <table id="result_list" class="table table-striped table-bordered table-hover table-condensed">
         <caption align="top" ><font size="5">总支出数据（不分月）</font></caption>
