--- a/lkl/lkl/templates/admin/income.html
+++ b/lkl/lkl/templates/admin/income.html
@@ -8,7 +8,7 @@
 <br/>
 <div id="d1" class="results">
     <table id="result_list" class="table table-striped table-bordered table-hover table-condensed">
-        <caption align="top"><font size="5">刷卡数据</font></caption>
+        <caption align="top"><font size="5">刷卡数据（18年2月起）</font></caption>
         <thead>
         <tr>
             <th>月份</th>
@@ -34,7 +34,7 @@
 
 <div id="d0" class="results">
     <table id="result_list" class="table table-striped table-bordered table-hover table-condensed">
-        <caption align="top" ><font size="5">秒到数据</font></caption>
+        <caption align="top" ><font size="5">秒到数据（18年2月起）</font></caption>
         <thead>
         <tr>
             <th>月份</th>
