--- a/lkl/lkl/templates/admin/income.html
+++ b/lkl/lkl/templates/admin/income.html
@@ -61,7 +61,7 @@
         <caption align="top" ><font size="5">达标终端数据</font></caption>
         <thead>
         <tr>
-            <th>月份</th>
+            <th>激活月份</th>
             <th>达标数量</th>
         </tr>
         </thead>
