--- a/lkl/lkl/templates/admin/income.html
+++ b/lkl/lkl/templates/admin/income.html
@@ -63,6 +63,7 @@
         <tr>
             <th>激活月份</th>
             <th>达标数量</th>
+            <th>激活总数量</th>
         </tr>
         </thead>
         <tbody>
